Update demo, matching new features

--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
   <body>
     <div id="test">
         <button onclick="stopWEffect();">STOP</button>&nbsp;
-        <button onclick="startWEffect(30, 5, 3, 'winter');">Winter</button>&nbsp;
-        <button onclick="startWEffect(20, 4, 2, 'xmas');">XMas</button>&nbsp;
-        <button onclick="startWEffect(30, 5, 3, 'autumn');">Autumn</button>&nbsp;
-        <button onclick="startWEffect(40, 1, 5, 'rain');">Rain</button>&nbsp;
-        <button onclick="startWEffect(8, 1, 2, 'clouds');">Clouds</button>&nbsp;
-        <button onclick="startWEffect(8, 1, 2, 'storm');">Storm</button>&nbsp;
-        <button onclick="startWEffect(6, 1, 1, 'sun');">Sun</button>
+        <button onclick="startCurrentWEffect();">CURRENT</button>&nbsp;
+        <button onclick="startWEffect('winter');">Winter</button>&nbsp;
+        <button onclick="startWEffect('fall');">Fall</button>&nbsp;
+        <button onclick="startWEffect('xmas');">XMas</button>&nbsp;
+        <button onclick="startWEffect('rain');">Rain</button>&nbsp;
+        <button onclick="startWEffect('clouds');">Clouds</button>&nbsp;
+        <button onclick="startWEffect('storm');">Storm</button>&nbsp;
+        <button onclick="startWEffect('sun');">Sun</button>
     </div>
   </body>
 </html>
