--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
       <div class="section-title">Event Effects</div>
       <button onclick="startWEffect('xmas');">XMas</button>
       <button onclick="startWEffect('easter');">Easter</button>
+      <button onclick="startWEffect('halloween');">Halloween</button>
     </section>
     <section id="weather-effects">
       <div class="section-title">Weather Effects</div>
