--- a/index.html
+++ b/index.html
@@ -3,16 +3,14 @@
 <head>
   <link type="text/css" rel="stylesheet" href="seasonal.css" />
   <script src="seasonal.js"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
-    integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
+  <link rel="stylesheet" href="https://kit-pro.fontawesome.com/releases/v6.2.0/css/pro.min.css"
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/js/all.min.js"
-    integrity="sha512-naukR7I+Nk6gp7p5TMA4ycgfxaZBJ7MO5iC3Fp6ySQyKFHOGfpkSZkYVWV5R7u7cfAicxanwYQ5D1e17EfJcMA=="
+  <script src="https://kit-pro.fontawesome.com/releases/v6.2.0/js/all.min.js"
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <style>
     body {
       color: white;
-      background-color: #212121;
+      background-color: lightblue;
       font-size: 35px;
     }
 
